# airlab-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml  index.html  package-lock.json  package.json  template-.env  tsconfig.app.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml  template-config.toml
.git-hooks/: commit-msg
.github/workflows/: check.yml  ci.yml  release.yml  scheduled.yml  test.yml
crates/airlab-lib/: CHANGELOG.md  Cargo.toml  Makefile.toml
crates/airlab-lib/src/: config.rs  envs.rs  lib.rs  time.rs
crates/airlab-lib/src/_dev_utils/: dev_db.rs  mod.rs  test_db.rs
crates/airlab-lib/src/ctx/: error.rs  mod.rs
crates/airlab-lib/src/model/: base.rs  clone.rs  collection.rs  conjugate.rs  error.rs  group.rs  helpers.rs  lot.rs  member.rs  mod.rs  panel.rs  panel_element.rs  protein.rs  provider.rs  species.rs  storage.rs  tag.rs  tags.rs  user.rs  validation.rs  validation_file.rs  view_application.rs  view_clone.rs  view_conjugate.rs  view_lot.rs  view_member.rs  view_panel.rs  view_panel_element.rs  view_validation.rs
crates/airlab-lib/src/model/base/: crud_fns.rs  macro_utils.rs  mod.rs  utils.rs
crates/airlab-lib/src/model/store/: mod.rs
crates/airlab-lib/src/model/store/dbx/: error.rs  mod.rs
crates/airlab-lib/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
crates/airlab-lib/src/token/: error.rs  mod.rs
crates/airlab-lib/tests/: proof_of_principle.rs
crates/airlab-web/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
crates/airlab-web/migrations/: 001_init.sql  002_init.sql  003_storage.sql  004_conjugate_storage_fk.sql  005_collection.sql  006_lot_collection_fk.sql  007_lot_storage_fk.sql
crates/airlab-web/src/: config.rs  error.rs  lib.rs  main.rs  util.rs  web_util.rs
crates/airlab-web/src/log/: mod.rs
crates/airlab-web/src/search_shadow/: basic.rs  clone.rs  mod.rs  registry.rs
crates/airlab-web/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_clone.rs  routes_conjugate.rs  routes_fallback.rs  routes_group.rs  routes_json.rs  routes_login.rs  routes_lot.rs  routes_member.rs  routes_panel.rs  routes_panel_element.rs  routes_protein.rs  routes_provider.rs  routes_search.rs  routes_species.rs  routes_static.rs  routes_tag.rs  routes_telemetry.rs  routes_user.rs  routes_validation.rs  routes_validation_file.rs  routes_ws.rs
crates/airlab-web/tests/: proof_of_principle.rs  search_api_matrix.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: lib.rs
crates/services/web-airlab/: Cargo.toml
crates/services/web-airlab/src/: config.rs  main.rs  web_util.rs
src/: App.vue  component-hooks.ts  env.ts  main.ts
src/components/: FilterField.vue  FilterSummary.vue  InfoView.vue  LoadingView.vue  MfaDialog.vue  MfaSetupDialog.vue  NotificationsManager.vue  RouterComponent.vue  ToolbarProgressBar.vue  UploadButton.vue
src/components/__tests__/: InfoView.test.ts
src/composables/: useClones.ts  useCollections.ts  useConjugates.ts  useGroups.ts  useLots.ts  useMembers.ts  usePanelElements.ts  usePanels.ts  useProteins.ts  useProviders.ts  useSelectedConjugateViews.ts  useServerTablePagination.ts  useSpecies.ts  useStorages.ts  useTagConjugates.ts  useTags.ts  useUsers.ts  useValidationFiles.ts  useValidations.ts
src/composables/__tests__/: useClones.test.ts  useCollections.test.ts  useConjugates.test.ts  useGroups.test.ts  useLots.test.ts  useMembers.test.ts  usePanelElements.test.ts  usePanels.test.ts  useProteins.test.ts  useProviders.test.ts  useSpecies.test.ts  useTagConjugates.test.ts  useTags.test.ts  useUsers.test.ts  useValidationFiles.test.ts  useValidations.test.ts
src/filters/: globalFilterConfig.ts
src/modules/clone/: types.ts
src/modules/collection/: types.ts
src/modules/conjugate/: ConjugateStatus.ts  types.ts
src/modules/core/: types.ts
src/modules/group/: api.ts  types.ts
src/modules/json/: api.ts
src/modules/lot/: LotStatus.ts  statusUpdate.ts  types.ts
src/modules/member/: api.ts  types.ts
src/modules/panel/: types.ts
src/modules/panel_element/: types.ts
src/modules/protein/: types.ts
src/modules/provider/: types.ts
src/modules/species/: types.ts
src/modules/storage/: types.ts
src/modules/tag/: TagStatus.ts  types.ts
src/modules/user/: api.ts  types.ts
src/modules/validation/: types.ts
src/modules/validation_file/: api.ts  types.ts
src/plugins/: masonry-css.ts  vuetify.ts
src/router/: index.ts
src/stores/: clone.ts  collection.ts  conjugate.ts  group.ts  lot.ts  main.ts  member.ts  panel.ts  panel_element.ts  protein.ts  provider.ts  responsive.ts  settings.ts  species.ts  storage.ts  tag.ts  useFilterStore.ts  user.ts  validation.ts  validation_file.ts
src/stores/__tests__/: clone.test.ts  conjugate.test.ts  group.test.ts  lot.test.ts  main.test.ts  member.test.ts  panel.test.ts  panel_element.test.ts  protein.test.ts  provider.test.ts  responsive.test.ts  settings.test.ts  species.test.ts  tag.test.ts  useFilterStore.test.ts  user.test.ts  validation.test.ts  validation_file.test.ts
src/telemetry/: errors.ts
src/utils/: BroadcastManager.ts  WebSocketManager.ts  api.ts  converters.ts  enums.ts  exporters.ts  resetCache.ts  useDebouncedSearch.ts
src/utils/__tests__/: BroadcastManager.test.ts  IsotopeMasses.test.ts  WebSocketManager.test.ts  WebSocketMessage.test.ts  api.test.ts  auth.test.ts  converters.test.ts  enums.test.ts  exporters.test.ts  resetCache.test.ts  templates.test.ts  useDebouncedSearch.test.ts  validators.test.ts
src/views/: Login.vue  PasswordRecovery.vue  ResetPassword.vue  SignUp.vue
src/views/__tests__/: ListViews.test.ts  ViewTemplates.test.ts
src/views/main/: GroupCard.vue  GroupsView.vue  Main.vue  Start.vue
src/views/main/admin/: Admin.vue
tests/: setup.ts
(+122 files in other folders)
