[package]
name = "airlab-lib"
version = "0.1.2"
edition = "2021"
authors = ["Lars Malmstroem <lars.malmstroem@uzh.ch>"]
description = "airlab backend"
license = "MIT"
repository = "https://github.com/BodenmillerGroup/airlab-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
sea-query = { version = "0.30.4", features = ["with-json", "postgres-array", "postgres-types"] }
sea-query-binder = { version = "0.5.0", features = ["chrono", "with-chrono", "with-uuid", "sqlx-postgres", "with-time", "with-json", "postgres-array"] }
modql = {version = "0.3.4", features = ["with-sea-query"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
derive_more = {version = "1.0.0-beta", features = ["from"] }
chrono = { version = "0.4.31", features = ["serde"] }
camino = "1.1.7"
hmac = "0.12"
sha2 = "0.10"
argon2 = {version="0.5", features=["std"]}
lazy-regex = "3"
base64 = "0.21"
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
