[package]
name = "airlab-lib"
version = "0.2.0"
edition = "2024"
authors = ["Lars Malmstroem <lars.malmstroem@uzh.ch>"]
description = "airlab backend"
license = "MIT"
repository = "https://github.com/BodenmillerGroup/airlab-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
derive_more = {version = "2.1.1", features = ["from"] }
chrono = { version = "0.4.44", features = ["serde"] }
camino = "1.2.2"
hmac = "0.12"
sha2 = "0.10"
argon2 = {version="0.5", features=["std"]}
lazy-regex = "3"
base64 = "0.22"
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}

sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "uuid", "chrono"] }
sea-query = { version = "0.32", features = ["with-json", "postgres-array", "postgres-types"] }
sea-query-binder = { version = "0.7", features = ["chrono", "with-chrono", "with-uuid", "sqlx-postgres", "with-time", "with-json", "postgres-array"]}
modql = { version = "0.4.1", features = ["with-sea-query"]}
rand = "0.10.0"
thotp = "0.1.11"
urlencoding = "2.1.3"

[dev-dependencies]
serial_test = "3"
