[package]
name = "airlab-web"
version = "0.2.1"
edition = "2024"
authors = ["Lars Malmstroem <lars.malmstroem@uzh.ch>"]
description = "airlab backend"
license = "MIT"
repository = "https://github.com/BodenmillerGroup/airlab-rs"

[dependencies]
airlab-lib = { version = "^0", path = "../airlab-lib" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
camino = "1.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.28"
derive_more = {version = "2.1.1", features = ["from"] }
recap = "0.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", "default-features"=false,features = ["json", "rustls"] }
lettre = { version = "0.11.19", "default-features"=false, features=["rustls", "webpki-roots", "ring", "smtp-transport", "builder"]}
tokio-util = "0.7.18"
hyper = "1.8.1"
md5 = "0.8.0"
hex = "0.4.3"

sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "postgres", "uuid"] }
modql = { version = "0.4.1", features = ["with-sea-query"]}
rand = "0.10.0"
urlencoding = "2.1.3"
thotp = "0.1.11"
qrcode = "0.14.1"
sea-query = "0.32.7"
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
